[package]
name = "ipfinder"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
actix-web = "4.4.0"
cargo-watch = "8.4.1"
mongodb = "2.7.0"
bson = "2.7.0"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
async-trait = "0.1.73"
