[package]
name = "iproxy"
version = "0.1.0"
edition = "2021"
#rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
serde_json = "1.0.122"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
async-trait = "0.1.81"
toml = "0.8.19"
mongodb = "3.0.1"
bson = "2.11.0"
thiserror = "1.0.63"

