[package]
name = "iproxy"
version = "0.1.0"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
repository = "https://github.com/containerscrew/iproxy"
rust-version = "1.80.1"
license-file = "LICENSE"
description = "Proxy server for IP geolocation. Use external services to get the geolocation of an IP address."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
serde_json = "1.0.122"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
async-trait = "0.1.81"
toml = "0.8.19"
mongodb = "3.0.1"
bson = "2.11.0"
thiserror = "1.0.63"
openssl = { version = "0.10.59", features = ["vendored"] }
